--- a/README.Rmd
+++ b/README.Rmd
@@ -3,20 +3,81 @@ title: "rapidraker"
 output: github_document
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "README-"
+  progress = FALSE,
+  error = FALSE, 
+  message = FALSE,
+  warning = FALSE
 )
+
+options(digits = 2)
 ```
 
 > A fast version of the Rapid Automatic Keyword Extraction (RAKE) algorithm
 
+[![Linux Build Status](https://travis-ci.org/crew102/rapidraker.svg?branch=master)](https://travis-ci.org/crew102/rapidraker) 
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/o8nxlmteivknib4d?svg=true
+)](https://ci.appveyor.com/project/crew102/rapidraker)
+
 ## Installation
+
+You can get the stable version from CRAN:
+
+```r
+install.packages("rapidraker")
+```
+
+Or the development version from GitHub:
 
 ```r
 if (!require(devtools)) install.packages("devtools")
 
 devtools::install_github("crew102/rapidraker")
 ```
+
+## What is `rapidraker`?
+
+`rapidraker` is an R package that provides an implementation of the same keyword extraction algorihtm (RAKE) that the `slowraker` package does. However, `rapidraker::rapidrake()` is written mostly in Java, whereas `slowraker::slowrake()` is written mostly in R. This means that you can expect `rapidrake()` to be considerably faster than `slowrake()`.
+
+## Usage
+
+`rapidrake()` has the same arguments as `slowrake()`, and both functions output the same type of object. You can therefore substitue `rapidrake()` for `slowraker()` without making any additional changes to your code. 
+
+```{r, eval = FALSE}
+library(slowraker)
+library(rapidraker)
+
+data("dog_pubs")
+rakelist <- rapidrake(txt = dog_pubs$abstract[1:5])
+```
+
+```{r, eval = TRUE, results = 'hide', echo = FALSE}
+# Note, we have to split the README.Rmd up like this so that it doesn't print 
+# the progress bar.
+library(slowraker)
+library(rapidraker)
+options(width = 100, digits = 2)
+
+data("dog_pubs")
+rakelist <- rapidrake(txt = dog_pubs$abstract[1:5])
+```
+
+`rapidrake()` outputs a list of data frames. Each data frame contains the keywords that were extracted for an element of `txt`:
+
+```{r}
+rakelist
+```
+
+You can bind these data frames together using `slowaker::rbind_rakelist()`:
+
+```{r}
+rakedf <- rbind_rakelist(rakelist = rakelist, doc_id = dog_pubs$doi[1:5])
+head(rakedf, 5)
+```
+
+## Learning more
+
+* To learn more about the API used by both `slowraker` and `rapidraker`, head over `slowraker`'s [webpage](https://crew102.github.io/slowraker/index.html).
