--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ You can get the stable version on CRAN:
 install.packages("rapidraker")
 ```
 
-The development version of the package requires you to compile the latest Java source code in [rapidrake-java](https://github.com/crew102/rapidrake-java), so it's not as simple as making a call to  `devtools::install_github()`.
+The development version of the package requires you to compile the latest Java source code in [rapidrake-java](https://github.com/crew102/rapidrake-java), so installing it is not as simple as making a call to  `devtools::install_github()`.
 
 ## What is `rapidraker`?
 
